# nativelib

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
src/nativelib/: __init__.py  reader.py  writer.py
src/nativelib/common/: __init__.py  casts.pyi  repr.py
src/nativelib/common/dtypes/objects/: lowcardinality.pyx
src/nativelib/core/: __init__.py  errors.py  parse.pyi  parse.pyx  sizes.py
src/nativelib/core/blocks/: reader.pxd  reader.pyi  reader.pyx  writer.pyi  writer.pyx
src/nativelib/core/columns/: column.pxd  column.pyi  column.pyx  info.pyi  info.pyx
src/nativelib/core/types/functions/: dates.pyx  decimals.pyx  enums.pyx  integers.pxd  integers.pyx  strings.pyx
src/nativelib/core/types/objects/: array.pxd  array.pyi  array.pyx  dtype.pxd  dtype.pyi  dtype.pyx  lowcardinality.pxd  lowcardinality.pyi  lowcardinality.pyx
tests/: test_ntivelib.py
