[build-system]
requires = ["setuptools", "wheel", "cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "nativelib"
version = "0.2.5.dev0"
description = "Library for read and write clickhouse native format."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "backports.zoneinfo==0.2.1; python_version < '3.9'",
    "pandas>=2.1.0",
    "polars>=0.20.31",
]

[project.urls]
Homepage = "https://github.com/dns-technologies/nativelib"
Documentation = "https://dns-technologies.github.io/dbhose_airflow/base_modules/nativelib/index.html"
Repository = "https://github.com/dns-technologies/nativelib"
Changelog = "https://github.com/dns-technologies/nativelib/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
nativelib = ["**/*.pyi", "*.md", "*.txt"]
